assets/css/style.scss
---
---

@import "{{ site.theme }}";

#main-content h1, #main-content h2, #main-content h3, #main-content h4, #main-content h5, #main-content h6 {
	font-family: 'Helvetica Neue', Helvetica, Arial, serif;
}

pre, code {
	background-color: #f8f8f8;
}

pre code {
	background-color: #f8f8f8;
}

header {
    padding-top: 12px;
    padding-bottom: 12px;
}

header h1 {
	width: 700px;
}

header h2 {
	color: #5e8499;
}

@media only screen and (min-width: 960px) {
	header h2 {
		width: 700px;
		font-size: 36px;
	}
	header h1 {
		width: 700px;
		font-size: 72px;
	}
	p {
		font-size: 15px;
	    margin-bottom: 15px;
	}
	blockquote {
		padding: 0 0 0 15px;
	    margin-inline-start: 15px;
	    margin-inline-end: 15px;
	}
}

@media only screen and (max-width: 959px) and (min-width: 768px) {
	header h2 {
		width: 600px;
		font-size: 30px;
	}
	header h1 {
		width: 600px;
		font-size: 60px;
	}
	p {
		font-size: 14px;
		margin-bottom: 14px;
	}
	blockquote {
		padding: 0 0 0 14px;
	    margin-inline-start: 14px;
	    margin-inline-end: 14px;
	}
}

@media only screen and (max-width: 767px) and (min-width: 600px) {
	header h2 {
		font-size: 24px;
		width: 400px;
	}
	header h1 {
		font-size: 48px;
		width: 400px;
	}
	p {
		font-size: 12px;
		margin-bottom: 12px;
	}
	blockquote {
		padding: 0 0 0 12px;
	    margin-inline-start: 12px;
	    margin-inline-end: 12px;
	}
}

@media only screen and (max-width: 599px) {
	header h2 {
		font-size: 20px;
		width: 400px;
	}
	header h1 {
		font-size: 40px;
		width: 400px;
	}
	p {
		font-size: 10px;
		margin-bottom: 10px;
	}
	blockquote {
		padding: 0 0 0 10px;
	    margin-inline-start: 10px;
	    margin-inline-end: 10px;
	}
}

header {
	background: url(https://raw.githubusercontent.com/Sky-Nik/numerical-analysis/master/bg.png);
	a.button {
		background-color: #236;
	}
}

